--- a/MongoDBBooksApi/appsettings.json
+++ b/MongoDBBooksApi/appsettings.json
@@ -6,5 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "BookstoreDatabaseSettings": {
+    "BooksCollectionName": "Books",
+    "ConnectionString": "mongodb://KiariCode:devdevelopment2077@localhost:27017",
+    "DatabaseName": "BookstoreDb"
+  }
 }
